# CSSD

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  cssd.m  cssd_cv.m  install_cssd.m  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml
crates/cssd-core/: Cargo.toml
crates/cssd-core/src/: chk.rs  csaps.rs  cssd.rs  cv.rs  dp.rs  eps_lr.rs  lib.rs  ppform.rs  precond.rs  qr.rs
crates/cssd-core/tests/: matlab_parity.rs  paper_compliance.rs  parity.rs  preconditioning.rs
crates/cssd-py/: Cargo.toml
crates/cssd-py/src/: lib.rs
demos/: Ex_CPUTime.m  Ex_Geyser_CV.asv  Ex_Geyser_CV.m  Ex_HeaviSine.m  Ex_Stock_CV.m  Ex_Synthetic.m  Ex_Synthetic_CV_Comparison.m  Ex_VectorValued.m  Table_MetaStock.mat  ruptures_cssd.py
demos_py/: ex_cputime.py  ex_geyser_cv.py  ex_heavi_sine.py  ex_preconditioning.py  ex_synthetic.py  ex_vector_valued.py  release_smoke_test.ipynb
python/cssd/: __init__.py  _api.py  cv.py  ppform.py
subroutines/: PcwFunReal.m  chkxydelta.m  cssd_cvscore.m  embed_pptocubic.m  kfoldcv_split.m  linext_pp.m  merge_ppcell.m  spline_innerenergy.m  startEpsLR.m  updateEpsLR.m
tests/: TestCSSD.m
tests_py/: conftest.py  test_edge_cases.py  test_internal_consistency.py  test_matlab_parity.py  test_preconditioning.py
