[workspace]
resolver = "2"
members = ["crates/cssd-core", "crates/cssd-py"]

[workspace.package]
version = "1.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/mstorath/CSSD"
authors = ["Martin Storath", "Andreas Weinmann"]

[workspace.dependencies]
ndarray = "0.16"
nalgebra = "0.33"
thiserror = "2"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
