[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "cssd"
version = "1.0.1"
description = "Cubic smoothing splines for discontinuous signals (CSSD)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Martin Storath", email = "martin.storath@thws.de" },
    { name = "Andreas Weinmann", email = "andreas.weinmann@thws.de" },
]
requires-python = ">=3.9"
keywords = [
    "smoothing-spline",
    "discontinuities",
    "signal-processing",
    "edge-preserving",
    "variational-methods",
    "piecewise",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
]

[project.optional-dependencies]
demos = ["matplotlib>=3.6", "pandas>=1.5"]
test = ["pytest>=7", "scipy>=1.10"]
dev = ["maturin>=1.7", "pytest>=7", "matplotlib>=3.6"]

[project.urls]
Homepage = "https://github.com/mstorath/CSSD"
Repository = "https://github.com/mstorath/CSSD"
Changelog = "https://github.com/mstorath/CSSD/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/mstorath/CSSD/issues"

[tool.maturin]
manifest-path = "crates/cssd-py/Cargo.toml"
module-name = "cssd._cssd_core"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true
[tool.pytest.ini_options]
testpaths = ["tests_py"]

